<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".register.RegisterActivity"
    android:theme="@style/StartScreenTheme">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">
        <include
            android:id="@+id/ActionBar_r"
            layout="@layout/action_bar"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_20dp">
                <TextView
                    android:id="@+id/lb_register_msg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/startBlueGradient"
                    android:text="@string/lb_register_msg1"
                    android:textStyle="italic"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>
                <TextView
                    android:id="@+id/lb_register_tipo_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lb_register_msg1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/_17dp"
                    android:textColor="@color/colorText1"
                    android:text="@string/lb_tipo_identificacion"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>
                <Spinner
                    android:id="@+id/sp_register_tipo_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:background="@drawable/spinner_view_shape"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lb_register_tipo_id"
                    android:layout_marginTop="@dimen/_7dp"
                    android:elevation="@dimen/_4dp"
                    android:paddingHorizontal="@dimen/_18dp"
                    android:prompt="@string/et_tipo_identificacion"
                    android:spinnerMode="dropdown"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>

                <TextView
                    android:id="@+id/lb_register_numero_identificacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_n_identificacion"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sp_register_tipo_id"
                    android:layout_marginTop="@dimen/_14dp"
                    android:textColor="@color/colorText1"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>
                <EditText
                    android:id="@+id/et_register_numero_identificacion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    app:layout_constraintTop_toBottomOf="@id/lb_register_numero_identificacion"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/et_register_numero_identificacion"
                    android:elevation="@dimen/_4dp"
                    android:textSize="@dimen/_12sp"
                    android:paddingHorizontal="@dimen/_17dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:inputType="number"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>

                <TextView
                    android:id="@+id/lb_register_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_register_numero_identificacion"
                    android:layout_marginTop="@dimen/_17dp"
                    android:textColor="@color/colorText1"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>
                <EditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    app:layout_constraintTop_toBottomOf="@id/lb_register_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/et_email"
                    android:textSize="@dimen/_12sp"
                    android:paddingHorizontal="@dimen/_17dp"
                    android:layout_marginTop="@dimen/_11dp"
                    android:elevation="@dimen/_4dp"
                    android:inputType="textEmailAddress"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>

                <TextView
                    android:id="@+id/lb_register_conf_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_conf_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_register_email"
                    android:layout_marginTop="@dimen/_17dp"
                    android:textColor="@color/colorText1"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>
                <EditText
                    android:id="@+id/et_register_conf_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    app:layout_constraintTop_toBottomOf="@id/lb_register_conf_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/et_conf_email"
                    android:textSize="@dimen/_12sp"
                    android:paddingHorizontal="@dimen/_17dp"
                    android:layout_marginTop="@dimen/_11dp"
                    android:elevation="@dimen/_4dp"
                    android:inputType="textEmailAddress"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>

                <TextView
                    android:id="@+id/lb_register_contrasenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_register_contrasenha"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_register_conf_email"
                    android:layout_marginTop="@dimen/_17dp"
                    android:textColor="@color/colorText1"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>
                <EditText
                    android:id="@+id/et_register_contrasenha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    app:layout_constraintTop_toBottomOf="@id/lb_register_contrasenha"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/et_register_contrasenha"
                    android:textSize="@dimen/_12sp"
                    android:paddingHorizontal="@dimen/_17dp"
                    android:layout_marginTop="@dimen/_11dp"
                    android:elevation="@dimen/_4dp"
                    android:inputType="textPassword"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>

                <TextView
                    android:id="@+id/lb_register_valid_contrasenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_register_validar_contrasenha"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_register_contrasenha"
                    android:layout_marginTop="@dimen/_17dp"
                    android:textColor="@color/colorText1"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>
                <EditText
                    android:id="@+id/et_register_validar_contrasenha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    app:layout_constraintTop_toBottomOf="@id/lb_register_valid_contrasenha"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/et_register_validar_contrasenha"
                    android:textSize="@dimen/_12sp"
                    android:paddingHorizontal="@dimen/_17dp"
                    android:layout_marginTop="@dimen/_11dp"
                    android:elevation="@dimen/_4dp"
                    android:inputType="textPassword"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>

                <TextView
                    android:id="@+id/lb_register_terminos"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_28dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_register_terminos"
                    app:layout_constraintTop_toBottomOf="@id/et_register_validar_contrasenha"
                    android:layout_marginTop="@dimen/_22dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:theme="@style/label_info"
                    android:gravity="center_vertical"
                    android:text="@string/lb_register_terminos"
                    android:autofillHints="@null"
                    tools:targetApi="o"/>

                <CheckBox
                    android:id="@+id/cb_register_terminos"
                    android:layout_width="@dimen/_28dp"
                    android:layout_height="@dimen/_28dp"
                    android:layout_marginHorizontal="@dimen/_3dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/lb_register_terminos"
                    app:layout_constraintBottom_toBottomOf="@id/lb_register_terminos"
                    android:button="@drawable/checkbox_drawable"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:theme="@style/Button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_27dp"
                    app:layout_constraintTop_toBottomOf="@id/cb_register_terminos"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:gravity="center"
                    app:cornerRadius="@dimen/_20dp"
                    android:text="@string/btn_enviar"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>