<?xml version="1.0" encoding="utf-8"?>
<layout
    tools:context=".login.LoginActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.wigilabs.saludtotal.login.LoginViewModel" />
        <variable
            name="clase"
            type="com.wigilabs.saludtotal.login.LoginActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/colorWhite">
         <include
            android:id="@+id/ActionBar_r"
            layout="@layout/action_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/_90dp"

                android:paddingLeft="@dimen/_20dp"
                android:paddingRight="@dimen/_20dp">
                <TextView
                    android:id="@+id/lb_login_msg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_17dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:theme="@style/label_info_azul"
                    android:text="@string/lb_login_msg1"/>

                <TextView
                    android:id="@+id/lb_login_tipo_identificaccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lb_login_msg1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/_28dp"
                    android:theme="@style/label_names"
                    android:text="@string/lb_tipo_identificacion"/>
                <Spinner
                    android:id="@+id/sp_login_tipo_documento"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:background="@drawable/spinner_view_shape"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lb_login_tipo_identificaccion"
                    android:layout_marginTop="@dimen/_8dp"
                    android:prompt="@string/et_tipo_identificacion"
                    android:spinnerMode="dropdown"/>

                <TextView
                    android:id="@+id/lb_login_numero_identificacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/sp_login_tipo_documento"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/_13dp"
                    android:theme="@style/label_names"
                    android:text="@string/lb_n_identificacion"/>
                <EditText
                    android:id="@+id/et_login_identificacion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    app:layout_constraintTop_toBottomOf="@id/lb_login_numero_identificacion"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/_11dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/et_n_identificacion"
                    android:textSize="@dimen/_12sp"
                    android:paddingLeft="@dimen/_17dp"
                    android:paddingRight="@dimen/_17dp"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/lb_login_contrasenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/et_login_identificacion"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/_17dp"
                    android:theme="@style/label_names"
                    android:text="@string/lb_register_contrasenha"/>
                <EditText
                    android:id="@+id/et_login_contrasenha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    app:layout_constraintTop_toBottomOf="@id/lb_login_contrasenha"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/_11dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/et_login_contrasenha"
                    android:textSize="@dimen/_12sp"
                    android:paddingLeft="@dimen/_17dp"
                    android:paddingRight="@dimen/_17dp"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/lb_login_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/et_login_contrasenha"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/_17dp"
                    android:gravity="center"
                    android:theme="@style/label_info_azul"
                    android:text="@string/lb_login_forgot_password"/>

                <com.google.android.material.button.MaterialButton
                    android:onClick="@{()->viewmodel.onClickLogin()}"
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lb_login_forgot_password"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_marginRight="@dimen/_20dp"
                    app:cornerRadius="@dimen/_20dp"
                    android:theme="@style/Button1"
                    android:text="@string/btn_login"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>